--- a/server/views/ABM/Plu/plu_table_icon.ejs
+++ b/server/views/ABM/Plu/plu_table_icon.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../../templates/head', {datahead: {titulo: 'Selección Imagen' , css: '/css/ABM/PLUs/plu3_0.css' }}) %>
+<%- include('../../templates/head', {datahead: {titulo: 'Selección Imagen' , css: '/css/ABM/PLUs/plu_table_icon.css' }}) %>
 
     <body>
         <a class='container-btn-return' href="/api/menu/abm/plu">
