--- a/server/views/ABM/Plu/plu_table_1.ejs
+++ b/server/views/ABM/Plu/plu_table_1.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../../templates/head', {datahead: {titulo: 'Selección PLU' , css: '/css/ABM/PLUs/plu1_1.css' }}) %>
+<%- include('../../templates/head', {datahead: {titulo: 'Selección PLU' , css: '/css/ABM/PLUs/plu_table_1.css' }}) %>
 
     <body>
         <a class='container-btn-return' href="/api/menu/abm/plu">
