--- a/server/views/ABM/Plu/plu_form_princ.ejs
+++ b/server/views/ABM/Plu/plu_form_princ.ejs
@@ -21,7 +21,7 @@
                         <div class="form-part">
                             <div class="entries" id="divicon">
                                 <a href="/api/menu/abm/plu/formEditGral/productImages">
-                                    <% if(data.binarydata != '' && data.binarydata != null){ %>
+                                    <% if(data.binarydata != '' && data.binarydata != null && data.binarydata != undefined){ %>
                                         <img src="data:image/jpg;base64,<%=data.binarydata%>" title="Editar">
                                     <% } else { %>
                                         Agregar Icono
@@ -87,7 +87,8 @@
                             </div>
                             <div class="entries" id="divpubli">                                
                                 <label for='publi'>Publicidad</label>
-                                <select  id='publi' name='publi'>
+                                <select  id='publicidad' name='publicidad'>
+                                    <option class='optionUser' ></option>
                                     <% data.arrpubli.map(e => { %>
                                         <option class='optionUser' id="<%= e.publi_id %>" value="<%= e.publi_id %>"><%= e.publi_name %></option>
                                     <% }) %>
@@ -219,44 +220,44 @@
             </a>            
         </div>
         <script>
-            //console.log('Data: '+ '<%# JSON.stringify(data) %>');
+            //console.log('Data: '+ '<%#- JSON.stringify(data) %>');
             localStorage.setItem('dataPLU',  '<%- JSON.stringify(data) %>');
             
             // ############################ bloque navegación pestañas #######################################
             function setMargin(){
                 document.getElementById('formGral').style.marginLeft = localStorage.getItem("margin");
-                console.log('Margin: '+document.getElementById('formGral').style.marginLeft);
+                //console.log('Margin: '+document.getElementById('formGral').style.marginLeft);
             }
             
             function viewForm(id){
                 switch (id) {
                     case 'DATOS':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "0vw");
                         document.getElementById('formGral').style.marginLeft = '0vw';
                         break
                     case 'PRECIOS':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "-80vw");
                         document.getElementById('formGral').style.marginLeft = '-80vw';
                         break
                     case 'AVANZADO':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "-160vw");
                         document.getElementById('formGral').style.marginLeft = '-160vw';
                         break
                     case 'CODIGO':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "-240vw");
                         document.getElementById('formGral').style.marginLeft = '-240vw';
                         break
                     case 'FECHAS':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "-320vw");
                         document.getElementById('formGral').style.marginLeft = '-320vw';
                         break
                     case 'AUDIT':
-                        console.log(id);
+                        //console.log(id);
                         localStorage.setItem("margin", "-400vw");
                         document.getElementById('formGral').style.marginLeft = '-400vw';
                         break                     
@@ -267,7 +268,7 @@
             // ################################# onLoad campos ##########################################
 
             let isactive = <%-JSON.stringify(data.isactive)%>;
-            console.log('isactive: '+isactive);
+            //console.log('isactive: '+isactive);
             if (isactive == 'Y'){
                 document.getElementById('opcY').setAttribute('selected', '');
             } else {
@@ -290,37 +291,37 @@
                     break;                
             }
 
-            if (<%-data.depto.id%> != ''){ // ##### Depto #####
-                console.log('Depto: '+<%-data.depto.id%>);
+            if ('<%-data.depto.id%>' != '' && '<%-data.depto.id%>' != null && '<%-data.depto.id%>' != undefined){ // ##### Depto #####
+                //console.log('Depto: '+<%#-data.depto.id%>);
                 document.getElementById('d<%-data.depto.id%>').setAttribute('selected', '');
             } else { // Esto es para cuando sea un plu nuevo.
                 document.getElementById('d0').setAttribute('selected', '');
             }
 
-            if (<%-data.group.id%> != ''){ // ##### Group #####
+            if ('<%-data.group.id%>' != '' && '<%-data.group.id%>' != null && '<%-data.group.id%>' != undefined){ // ##### Group #####
                 document.getElementById('g<%-data.group.id%>').setAttribute('selected', '');
             } else { // Esto es para cuando sea un plu nuevo.
                 document.getElementById('g0').setAttribute('selected', '');
             }
 
-            if (<%-data.publi.id%> != ''){ // ##### publicidad asociada #####
-                document.getElementById('<%-data.publi.id%>').setAttribute('selected', '');
-            } else { // Esto es para cuando sea un plu nuevo.
-                document.getElementById('publi').setAttribute('title', '');
+            if ('<%-data.publi.id%>' != '' && '<%-data.publi.id%>' != null && '<%-data.publi.id%>' != undefined){ // ##### publicidad asociada #####
+                document.getElementById('<%-data.publi.id%>').setAttribute('selected', '');                
             }
 
-            if (<%-data.iva.id%> != ''){ // ##### IVA #####
+            //console.log('publi name: '+'<%-data.publi.name%>'); // NOTA: Si ejs falla al traer valor hay que implementar JSON.stringify() o poner la variable entre comillas.
+
+            if ('<%-data.iva.id%>' != '' && '<%-data.iva.id%>' != null && '<%-data.iva.id%>' != undefined){ // ##### IVA #####
                 document.getElementById('<%-data.iva.id%>').setAttribute('selected', '');
             } else { // Esto es para cuando sea un plu nuevo.
                 document.getElementById('@').setAttribute('selected', '');
             }
 
-            document.getElementById('tara').value = parseFloat(<%-data.tara%>).toFixed(3);
+            document.getElementById('tara').value = parseFloat('<%-data.tara%>').toFixed(3);
             let maxTara = (parseInt('<%=data.fs%>') * 0.05).toFixed(3);
-            console.log('maxTara: '+maxTara);
+            //console.log('maxTara: '+maxTara);
             document.getElementById('tara').setAttribute('max', `${maxTara}`);
 
-            document.getElementById('perTare').value = parseFloat(<%-data.waterperc%>).toFixed(3);
+            document.getElementById('perTare').value = parseFloat('<%-data.waterperc%>').toFixed(3);
 
             // #################################  fín onLoad campos ##########################################
 
