--- a/server/views/ABM/Plu/plu_table_discount.ejs
+++ b/server/views/ABM/Plu/plu_table_discount.ejs
@@ -18,31 +18,40 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <%# if (data !=='' && data !==null && data !==undefined) { %>
-                            <%# for (var i=0; i < data.length; i++ ) { %>
+                        <% if (data !=='' && data !==null && data !==undefined) { %>
+                            <% for (var i=0; i < data.length; i++ ) { %>
                                 <tr>
                                     <form method="POST" action="/api/menu/abm/plu/formEditGral/updateDiscount">
                                         <input style="display: none" type="text" name="discountid"
-                                            value="<%#= data[i].pricelist %>">
-                                        <td><input class="inputPrice" type="number" name="hasta"
-                                                value="<%#= data[i].nombre %>" required></td>
-                                        <td><input class="inputPrice" type="number" name="price"
-                                                value="<%#- parseInt(data[i].precio).toFixed(2) %>"
-                                                onclick="this.value=''" onchange="this.form.submit()" required/></td>
+                                            value="<%= data[i].id %>">
+                                        <td>
+                                            <input class="inputPrice" type="number" name="hasta"
+                                                value="<%= data[i].hasta %>" 
+                                                onclick="this.value=''" onchange="this.form.submit()" required>
+                                        </td>
+                                        <td>
+                                            <input class="inputPrice" type="number" name="precio"
+                                                value="<%- parseInt(data[i].precio).toFixed(2) %>"
+                                                onclick="this.value=''" onchange="this.form.submit()" required/>
+                                        </td>
                                     </form>
                                 </tr>
-                            <%# } %>
-                        <%# } else { %>
+                            <% } %>
+                        <% } else { %>
                             <tr>
                                 <td colspan="2">No hay registros!</td>
                             </tr>
-                        <%# } %>
+                        <% } %>
                         <tr>
-                            <form method="POST" action="/api/menu/abm/plu/formEditGral/createDiscount">
-                                <input style="display: none" type="text" name="discountid" value="<%#= data[i].pricelist %>">
-                                <td><input class="inputPrice" type="number" name="hasta" value="<%#= data[i].nombre %>" required></td>
-                                <td><input class="inputPrice" type="number" name="price" value="<%#- parseInt(data[i].precio).toFixed(2) %>"
-                                        onclick="this.value=''" onchange="this.form.submit()" required /></td>
+                            <form method="POST" id="formInsert" action="/api/menu/abm/plu/formEditGral/createDiscount">
+                                <input style="display: none" type="text" name="discountid" value="cómo mierda genera el id">
+                                <td>
+                                    <input class="inputPrice" type="number" name="hasta" value="" required>
+                                </td>
+                                <td>
+                                    <input class="inputPrice" type="number" name="price" value=""
+                                        onclick="this.value=''" onchange="submitForm('formInsert')" required />
+                                </td>
                             </form>
                         </tr>
                     </tbody>
